zh_cn.json for 6.4.0

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2339,7 +2339,7 @@
   "block.urushi.green_plaster_bars": "绿色灰泥屏风柱",
   "block.urushi.red_plaster_bars": "红色灰泥屏风柱",
   "block.urushi.black_plaster_bars": "黑色灰泥屏风柱",
-  "block.urushi.horizontal_plaster_bars": "漆喰横向屏风柱",
+  "block.urushi.horizontal_plaster_bars": "灰泥横向屏风柱",
   "block.urushi.horizontal_orange_plaster_bars": "橙色灰泥横向屏风柱",
   "block.urushi.horizontal_magenta_plaster_bars": "品红色灰泥横向屏风柱",
   "block.urushi.horizontal_light_blue_plaster_bars": "淡蓝色灰泥横向屏风柱",
@@ -2622,6 +2622,8 @@
    "block.urushi.mandarin_sapling": "橘树树苗",
    "block.urushi.mandarin_leaves": "橘树树叶",
    "block.urushi.kotatsu": "被炉",
+
+  "#comment-furigana-start": "↓No need to translate furiganas / 无需翻译假名注音",
   "info.urushi.furigana.ryokusyou": "緑青(りょくしょう)",
   "info.urushi.furigana.seiroku": "青緑(せいろく)",
   "info.urushi.furigana.kaya": "茅(かや)",
@@ -2686,158 +2688,160 @@
   "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
   "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
   "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
-  "block.urushi.concrete_block_wall": "コンクリート塀",
-  "block.urushi.limonite_ore": "褐鉄鉱",
-  "block.urushi.chalcopyrite_ore": "黄銅鉱",
-  "block.urushi.smooth_mangrove_planks": "滑らかなマングローブの板材",
-  "block.urushi.smooth_mangrove_slab": "滑らかなマングローブのハーフブロック",
-  "block.urushi.smooth_mangrove_stairs": "滑らかなマングローブの階段",
-  "block.urushi.mangrove_parapet": "マングローブの欄干",
-  "block.urushi.mangrove_framed_plaster": "マングローブの木枠付き漆喰",
-  "block.urushi.mangrove_bars": "マングローブの五本柱",
-  "block.urushi.mangrove_fushiranma": "マングローブの竹節欄間",
-  "block.urushi.mangrove_framed_wattle_and_daub": "マングローブの木枠付き土壁",
-  "block.urushi.mangrove_framed_sand_coast": "マングローブの木枠付き砂壁",
-  "block.urushi.mangrove_shitamiita": "下見板張りのマングローブの板材",
-  "block.urushi.mangrove_shitamiita_slab": "下見板張りのマングローブの板材のハーフブロック",
-  "block.urushi.mangrove_board_window": "マングローブの無双連子窓",
-  "block.urushi.mangrove_framed_orange_plaster": "マングローブの木枠付きの橙色の漆喰",
-  "block.urushi.mangrove_framed_magenta_plaster": "マングローブの木枠付きの赤紫色の漆喰",
-  "block.urushi.mangrove_framed_light_blue_plaster": "マングローブの木枠付きの空色の漆喰",
-  "block.urushi.mangrove_framed_yellow_plaster": "マングローブの木枠付きの黄色の漆喰",
-  "block.urushi.mangrove_framed_lime_plaster": "マングローブの木枠付きの黄緑色の漆喰",
-  "block.urushi.mangrove_framed_pink_plaster": "マングローブの木枠付きの桃色の漆喰",
-  "block.urushi.mangrove_framed_gray_plaster": "マングローブの木枠付きの灰色の漆喰",
-  "block.urushi.mangrove_framed_light_gray_plaster": "マングローブの木枠付きの薄灰色の漆喰",
-  "block.urushi.mangrove_framed_cyan_plaster": "マングローブの木枠付きの青緑色の漆喰",
-  "block.urushi.mangrove_framed_purple_plaster": "マングローブの木枠付きの紫色の漆喰",
-  "block.urushi.mangrove_framed_blue_plaster": "マングローブの木枠付きの青色の漆喰",
-  "block.urushi.mangrove_framed_brown_plaster": "マングローブの木枠付きの茶色の漆喰",
-  "block.urushi.mangrove_framed_green_plaster": "マングローブの木枠付きの緑色の漆喰",
-  "block.urushi.mangrove_framed_red_plaster": "マングローブの木枠付きの赤色の漆喰",
-  "block.urushi.mangrove_framed_black_plaster": "マングローブの木枠付きの黒色の漆喰",
-  "block.urushi.mangrove_wall_for_framed_blocks": "マングローブの壁",
-  "block.urushi.vertical_smooth_mangrove_slab": "滑らかなマングローブの縦ハーフブロック",
-  "block.urushi.horizontal_mangrove_bars": "マングローブの横向き五本柱",
-  "block.urushi.smooth_cherry_planks": "滑らかなサクラの板材",
-  "block.urushi.smooth_cherry_slab": "滑らかなサクラのハーフブロック",
-  "block.urushi.smooth_cherry_stairs": "滑らかなサクラの階段",
-  "block.urushi.cherry_parapet": "サクラの欄干",
-  "block.urushi.cherry_framed_plaster": "サクラの木枠付き漆喰",
-  "block.urushi.cherry_bars": "サクラの五本柱",
-  "block.urushi.cherry_fushiranma": "サクラの竹節欄間",
-  "block.urushi.cherry_framed_wattle_and_daub": "サクラの木枠付き土壁",
-  "block.urushi.cherry_framed_sand_coast": "サクラの木枠付き砂壁",
-  "block.urushi.cherry_shitamiita": "下見板張りのサクラの板材",
-  "block.urushi.cherry_shitamiita_slab": "下見板張りのサクラの板材のハーフブロック",
-  "block.urushi.cherry_board_window": "サクラの無双連子窓",
-  "block.urushi.cherry_framed_orange_plaster": "サクラの木枠付きの橙色の漆喰",
-  "block.urushi.cherry_framed_magenta_plaster": "サクラの木枠付きの赤紫色の漆喰",
-  "block.urushi.cherry_framed_light_blue_plaster": "サクラの木枠付きの空色の漆喰",
-  "block.urushi.cherry_framed_yellow_plaster": "サクラの木枠付きの黄色の漆喰",
-  "block.urushi.cherry_framed_lime_plaster": "サクラの木枠付きの黄緑色の漆喰",
-  "block.urushi.cherry_framed_pink_plaster": "サクラの木枠付きの桃色の漆喰",
-  "block.urushi.cherry_framed_gray_plaster": "サクラの木枠付きの灰色の漆喰",
-  "block.urushi.cherry_framed_light_gray_plaster": "サクラの木枠付きの薄灰色の漆喰",
-  "block.urushi.cherry_framed_cyan_plaster": "サクラの木枠付きの青緑色の漆喰",
-  "block.urushi.cherry_framed_purple_plaster": "サクラの木枠付きの紫色の漆喰",
-  "block.urushi.cherry_framed_blue_plaster": "サクラの木枠付きの青色の漆喰",
-  "block.urushi.cherry_framed_brown_plaster": "サクラの木枠付きの茶色の漆喰",
-  "block.urushi.cherry_framed_green_plaster": "サクラの木枠付きの緑色の漆喰",
-  "block.urushi.cherry_framed_red_plaster": "サクラの木枠付きの赤色の漆喰",
-  "block.urushi.cherry_framed_black_plaster": "サクラの木枠付きの黒色の漆喰",
-  "block.urushi.cherry_wall_for_framed_blocks": "サクラの壁",
-  "block.urushi.vertical_smooth_cherry_slab": "滑らかなサクラの縦ハーフブロック",
-  "block.urushi.horizontal_cherry_bars": "サクラの横向き五本柱",
-  "block.urushi.smooth_pale_oak_planks": "滑らかなペールオークの板材",
-  "block.urushi.smooth_pale_oak_slab": "滑らかなペールオークのハーフブロック",
-  "block.urushi.smooth_pale_oak_stairs": "滑らかなペールオークの階段",
-  "block.urushi.pale_oak_parapet": "ペールオークの欄干",
-  "block.urushi.pale_oak_framed_plaster": "ペールオークの木枠付き漆喰",
-  "block.urushi.pale_oak_bars": "ペールオークの五本柱",
-  "block.urushi.pale_oak_fushiranma": "ペールオークの竹節欄間",
-  "block.urushi.pale_oak_framed_wattle_and_daub": "ペールオークの木枠付き土壁",
-  "block.urushi.pale_oak_framed_sand_coast": "ペールオークの木枠付き砂壁",
-  "block.urushi.pale_oak_shitamiita": "下見板張りのペールオークの板材",
-  "block.urushi.pale_oak_shitamiita_slab": "下見板張りのペールオークの板材のハーフブロック",
-  "block.urushi.pale_oak_board_window": "ペールオークの無双連子窓",
-  "block.urushi.pale_oak_framed_orange_plaster": "ペールオークの木枠付きの橙色の漆喰",
-  "block.urushi.pale_oak_framed_magenta_plaster": "ペールオークの木枠付きの赤紫色の漆喰",
-  "block.urushi.pale_oak_framed_light_blue_plaster": "ペールオークの木枠付きの空色の漆喰",
-  "block.urushi.pale_oak_framed_yellow_plaster": "ペールオークの木枠付きの黄色の漆喰",
-  "block.urushi.pale_oak_framed_lime_plaster": "ペールオークの木枠付きの黄緑色の漆喰",
-  "block.urushi.pale_oak_framed_pink_plaster": "ペールオークの木枠付きの桃色の漆喰",
-  "block.urushi.pale_oak_framed_gray_plaster": "ペールオークの木枠付きの灰色の漆喰",
-  "block.urushi.pale_oak_framed_light_gray_plaster": "ペールオークの木枠付きの薄灰色の漆喰",
-  "block.urushi.pale_oak_framed_cyan_plaster": "ペールオークの木枠付きの青緑色の漆喰",
-  "block.urushi.pale_oak_framed_purple_plaster": "ペールオークの木枠付きの紫色の漆喰",
-  "block.urushi.pale_oak_framed_blue_plaster": "ペールオークの木枠付きの青色の漆喰",
-  "block.urushi.pale_oak_framed_brown_plaster": "ペールオークの木枠付きの茶色の漆喰",
-  "block.urushi.pale_oak_framed_green_plaster": "ペールオークの木枠付きの緑色の漆喰",
-  "block.urushi.pale_oak_framed_red_plaster": "ペールオークの木枠付きの赤色の漆喰",
-  "block.urushi.pale_oak_framed_black_plaster": "ペールオークの木枠付きの黒色の漆喰",
-  "block.urushi.pale_oak_wall_for_framed_blocks": "ペールオークの壁",
-  "block.urushi.vertical_smooth_pale_oak_slab": "滑らかなペールオークの縦ハーフブロック",
-  "block.urushi.horizontal_pale_oak_bars": "ペールオークの横向き五本柱",
-  "block.urushi.smooth_crimson_planks": "滑らかな真紅の板材",
-  "block.urushi.smooth_crimson_slab": "滑らかな真紅のハーフブロック",
-  "block.urushi.smooth_crimson_stairs": "滑らかな真紅の階段",
-  "block.urushi.crimson_framed_plaster": "真紅の木枠付き漆喰",
-  "block.urushi.crimson_framed_wattle_and_daub": "真紅の木枠付き土壁",
-  "block.urushi.crimson_framed_sand_coast": "真紅の木枠付き砂壁",
-  "block.urushi.crimson_framed_orange_plaster": "真紅の木枠付きの橙色の漆喰",
-  "block.urushi.crimson_framed_magenta_plaster": "真紅の木枠付きの赤紫色の漆喰",
-  "block.urushi.crimson_framed_light_blue_plaster": "真紅の木枠付きの空色の漆喰",
-  "block.urushi.crimson_framed_yellow_plaster": "真紅の木枠付きの黄色の漆喰",
-  "block.urushi.crimson_framed_lime_plaster": "真紅の木枠付きの黄緑色の漆喰",
-  "block.urushi.crimson_framed_pink_plaster": "真紅の木枠付きの桃色の漆喰",
-  "block.urushi.crimson_framed_gray_plaster": "真紅の木枠付きの灰色の漆喰",
-  "block.urushi.crimson_framed_light_gray_plaster": "真紅の木枠付きの薄灰色の漆喰",
-  "block.urushi.crimson_framed_cyan_plaster": "真紅の木枠付きの青緑色の漆喰",
-  "block.urushi.crimson_framed_purple_plaster": "真紅の木枠付きの紫色の漆喰",
-  "block.urushi.crimson_framed_blue_plaster": "真紅の木枠付きの青色の漆喰",
-  "block.urushi.crimson_framed_brown_plaster": "真紅の木枠付きの茶色の漆喰",
-  "block.urushi.crimson_framed_green_plaster": "真紅の木枠付きの緑色の漆喰",
-  "block.urushi.crimson_framed_red_plaster": "真紅の木枠付きの赤色の漆喰",
-  "block.urushi.crimson_framed_black_plaster": "真紅の木枠付きの黒色の漆喰",
-  "block.urushi.crimson_wall_for_framed_blocks": "真紅の壁",
-  "block.urushi.vertical_smooth_crimson_slab": "滑らかな真紅の縦ハーフブロック",
-  "block.urushi.smooth_warped_planks": "滑らかな歪んだの板材",
-  "block.urushi.smooth_warped_slab": "滑らかな歪んだのハーフブロック",
-  "block.urushi.smooth_warped_stairs": "滑らかな歪んだの階段",
-  "block.urushi.warped_framed_plaster": "歪んだの木枠付き漆喰",
-  "block.urushi.warped_framed_wattle_and_daub": "歪んだの木枠付き土壁",
-  "block.urushi.warped_framed_sand_coast": "歪んだの木枠付き砂壁",
-  "block.urushi.warped_framed_orange_plaster": "歪んだの木枠付きの橙色の漆喰",
-  "block.urushi.warped_framed_magenta_plaster": "歪んだの木枠付きの赤紫色の漆喰",
-  "block.urushi.warped_framed_light_blue_plaster": "歪んだの木枠付きの空色の漆喰",
-  "block.urushi.warped_framed_yellow_plaster": "歪んだの木枠付きの黄色の漆喰",
-  "block.urushi.warped_framed_lime_plaster": "歪んだの木枠付きの黄緑色の漆喰",
-  "block.urushi.warped_framed_pink_plaster": "歪んだの木枠付きの桃色の漆喰",
-  "block.urushi.warped_framed_gray_plaster": "歪んだの木枠付きの灰色の漆喰",
-  "block.urushi.warped_framed_light_gray_plaster": "歪んだの木枠付きの薄灰色の漆喰",
-  "block.urushi.warped_framed_cyan_plaster": "歪んだの木枠付きの青緑色の漆喰",
-  "block.urushi.warped_framed_purple_plaster": "歪んだの木枠付きの紫色の漆喰",
-  "block.urushi.warped_framed_blue_plaster": "歪んだの木枠付きの青色の漆喰",
-  "block.urushi.warped_framed_brown_plaster": "歪んだの木枠付きの茶色の漆喰",
-  "block.urushi.warped_framed_green_plaster": "歪んだの木枠付きの緑色の漆喰",
-  "block.urushi.warped_framed_red_plaster": "歪んだの木枠付きの赤色の漆喰",
-  "block.urushi.warped_framed_black_plaster": "歪んだの木枠付きの黒色の漆喰",
-  "block.urushi.warped_wall_for_framed_blocks": "歪んだの壁",
-  "block.urushi.vertical_smooth_warped_slab": "滑らかな歪んだの縦ハーフブロック",
-  "info.urushi.same_as_composter": "コンポスターと同様、右クリックのほかホッパーなどでもアイテムを投入できる。",
-  "info.urushi.fermentation_barrel_1": "ご飯8個から米麴8個、仕込み味噌8個から味噌8個を作成できる。",
-  "info.urushi.fermentation_barrel_2": "ご飯1個、米麴1個、水入り竹筒1個を入れて放置し、ガラス瓶で右クリックすることで日本酒を作成できる。",
-  "info.urushi.ochoko_1": "飲むと耐性と移動速度低下の効果が付与される。",
-  "info.urushi.ochoko_2": "何度も続けて飲むことで付与される効果のレベルや持続時間が強化される。",
-  "info.urushi.sake": "発酵用の樽にご飯1個、米麴1個、水入り竹筒1個を入れて放置し、ガラス瓶で発酵用の樽を右クリックすることで作成可能。",
-  "info.urushi.noodle": "メインハンドに麵切り包丁、オフハンドに生地を持って右クリックを押し続けると麺を作成しやすい。",
-  "item.urushi.sake": "日本酒",
-  "item.urushi.tokkuri": "とっくり",
-  "item.urushi.ochoko": "おちょこ",
-  "entity.urushi.sake_food": "日本酒",
-  "entity.urushi.tokkuri_food": "とっくり",
-  "entity.urushi.ochoko_food": "おちょこ"
+  "#comment-furigana-end": "↑No need to translate furiganas / 无需翻译假名注音",
+
+  "block.urushi.concrete_block_wall": "混凝土墙",
+  "block.urushi.limonite_ore": "褐铁矿",
+  "block.urushi.chalcopyrite_ore": "黄铜矿",
+  "block.urushi.smooth_mangrove_planks": "平滑红树木板",
+  "block.urushi.smooth_mangrove_slab": "平滑红树木台阶",
+  "block.urushi.smooth_mangrove_stairs": "平滑红树木楼梯",
+  "block.urushi.mangrove_parapet": "红树木栏杆",
+  "block.urushi.mangrove_framed_plaster": "红树木框灰泥",
+  "block.urushi.mangrove_bars": "红树木屏风柱",
+  "block.urushi.mangrove_fushiranma": "红树木叉型门上窗",
+  "block.urushi.mangrove_framed_wattle_and_daub": "红树木框土坯",
+  "block.urushi.mangrove_framed_sand_coast": "红树木框砂墙",
+  "block.urushi.mangrove_shitamiita": "红树木楔纹板",
+  "block.urushi.mangrove_shitamiita_slab": "红树木楔纹板台阶",
+  "block.urushi.mangrove_board_window": "红树木直棂推拉窗",
+  "block.urushi.mangrove_framed_orange_plaster": "红树木框橙色灰泥",
+  "block.urushi.mangrove_framed_magenta_plaster": "红树木框品红色灰泥",
+  "block.urushi.mangrove_framed_light_blue_plaster": "红树木框淡蓝色灰泥",
+  "block.urushi.mangrove_framed_yellow_plaster": "红树木框黄色灰泥",
+  "block.urushi.mangrove_framed_lime_plaster": "红树木框黄绿色灰泥",
+  "block.urushi.mangrove_framed_pink_plaster": "红树木框粉色灰泥",
+  "block.urushi.mangrove_framed_gray_plaster": "红树木框灰色灰泥",
+  "block.urushi.mangrove_framed_light_gray_plaster": "红树木框淡灰色灰泥",
+  "block.urushi.mangrove_framed_cyan_plaster": "红树木框青色灰泥",
+  "block.urushi.mangrove_framed_purple_plaster": "红树木框紫色灰泥",
+  "block.urushi.mangrove_framed_blue_plaster": "红树木框蓝色灰泥",
+  "block.urushi.mangrove_framed_brown_plaster": "红树木框棕色灰泥",
+  "block.urushi.mangrove_framed_green_plaster": "红树木框绿色灰泥",
+  "block.urushi.mangrove_framed_red_plaster": "红树木框红色灰泥",
+  "block.urushi.mangrove_framed_black_plaster": "红树木框红色灰泥",
+  "block.urushi.mangrove_wall_for_framed_blocks": "红树木墙板",
+  "block.urushi.vertical_smooth_mangrove_slab": "平滑红树木竖直台阶",
+  "block.urushi.horizontal_mangrove_bars": "红树木横向屏风柱",
+  "block.urushi.smooth_cherry_planks": "平滑樱花木板",
+  "block.urushi.smooth_cherry_slab": "平滑樱花木台阶",
+  "block.urushi.smooth_cherry_stairs": "平滑樱花木楼梯",
+  "block.urushi.cherry_parapet": "樱花木栏杆",
+  "block.urushi.cherry_framed_plaster": "樱花木框灰泥",
+  "block.urushi.cherry_bars": "樱花木屏风柱",
+  "block.urushi.cherry_fushiranma": "樱花木叉型门上窗",
+  "block.urushi.cherry_framed_wattle_and_daub": "樱花木框土坯",
+  "block.urushi.cherry_framed_sand_coast": "樱花木框砂墙",
+  "block.urushi.cherry_shitamiita": "樱花木楔纹板",
+  "block.urushi.cherry_shitamiita_slab": "樱花木楔纹板台阶",
+  "block.urushi.cherry_board_window": "樱花木直棂推拉窗",
+  "block.urushi.cherry_framed_orange_plaster": "樱花木框橙色灰泥",
+  "block.urushi.cherry_framed_magenta_plaster": "樱花木框品红色灰泥",
+  "block.urushi.cherry_framed_light_blue_plaster": "樱花木框淡蓝色灰泥",
+  "block.urushi.cherry_framed_yellow_plaster": "樱花木框黄色灰泥",
+  "block.urushi.cherry_framed_lime_plaster": "樱花木框黄绿色灰泥",
+  "block.urushi.cherry_framed_pink_plaster": "樱花木框粉色灰泥",
+  "block.urushi.cherry_framed_gray_plaster": "樱花木框灰色灰泥",
+  "block.urushi.cherry_framed_light_gray_plaster": "樱花木框淡灰色灰泥",
+  "block.urushi.cherry_framed_cyan_plaster": "樱花木框青色灰泥",
+  "block.urushi.cherry_framed_purple_plaster": "樱花木框紫色灰泥",
+  "block.urushi.cherry_framed_blue_plaster": "樱花木框蓝色灰泥",
+  "block.urushi.cherry_framed_brown_plaster": "樱花木框棕色灰泥",
+  "block.urushi.cherry_framed_green_plaster": "樱花木框绿色灰泥",
+  "block.urushi.cherry_framed_red_plaster": "樱花木框红色灰泥",
+  "block.urushi.cherry_framed_black_plaster": "樱花木框红色灰泥",
+  "block.urushi.cherry_wall_for_framed_blocks": "樱花木墙板",
+  "block.urushi.vertical_smooth_cherry_slab": "平滑樱花木竖直台阶",
+  "block.urushi.horizontal_cherry_bars": "樱花木横向屏风柱",
+  "block.urushi.smooth_pale_oak_planks": "平滑苍白橡木木板",
+  "block.urushi.smooth_pale_oak_slab": "平滑苍白橡木台阶",
+  "block.urushi.smooth_pale_oak_stairs": "平滑苍白橡木楼梯",
+  "block.urushi.pale_oak_parapet": "苍白橡木栏杆",
+  "block.urushi.pale_oak_framed_plaster": "苍白橡木框灰泥",
+  "block.urushi.pale_oak_bars": "苍白橡木屏风柱",
+  "block.urushi.pale_oak_fushiranma": "苍白橡木叉型门上窗",
+  "block.urushi.pale_oak_framed_wattle_and_daub": "苍白橡木框土坯",
+  "block.urushi.pale_oak_framed_sand_coast": "苍白橡木框砂墙",
+  "block.urushi.pale_oak_shitamiita": "苍白橡木楔纹板",
+  "block.urushi.pale_oak_shitamiita_slab": "苍白橡木楔纹板台阶",
+  "block.urushi.pale_oak_board_window": "苍白橡木直棂推拉窗",
+  "block.urushi.pale_oak_framed_orange_plaster": "苍白橡木框橙色灰泥",
+  "block.urushi.pale_oak_framed_magenta_plaster": "苍白橡木框品红色灰泥",
+  "block.urushi.pale_oak_framed_light_blue_plaster": "苍白橡木框淡蓝色灰泥",
+  "block.urushi.pale_oak_framed_yellow_plaster": "苍白橡木框黄色灰泥",
+  "block.urushi.pale_oak_framed_lime_plaster": "苍白橡木框黄绿色灰泥",
+  "block.urushi.pale_oak_framed_pink_plaster": "苍白橡木框粉色灰泥",
+  "block.urushi.pale_oak_framed_gray_plaster": "苍白橡木框灰色灰泥",
+  "block.urushi.pale_oak_framed_light_gray_plaster": "苍白橡木框淡灰色灰泥",
+  "block.urushi.pale_oak_framed_cyan_plaster": "苍白橡木框青色灰泥",
+  "block.urushi.pale_oak_framed_purple_plaster": "苍白橡木框紫色灰泥",
+  "block.urushi.pale_oak_framed_blue_plaster": "苍白橡木框蓝色灰泥",
+  "block.urushi.pale_oak_framed_brown_plaster": "苍白橡木框棕色灰泥",
+  "block.urushi.pale_oak_framed_green_plaster": "苍白橡木框绿色灰泥",
+  "block.urushi.pale_oak_framed_red_plaster": "苍白橡木框红色灰泥",
+  "block.urushi.pale_oak_framed_black_plaster": "苍白橡木框红色灰泥",
+  "block.urushi.pale_oak_wall_for_framed_blocks": "苍白橡木墙板",
+  "block.urushi.vertical_smooth_pale_oak_slab": "平滑苍白橡木竖直台阶",
+  "block.urushi.horizontal_pale_oak_bars": "苍白橡木横向屏风柱",
+  "block.urushi.smooth_crimson_planks": "平滑绯红木板",
+  "block.urushi.smooth_crimson_slab": "平滑绯红木台阶",
+  "block.urushi.smooth_crimson_stairs": "平滑绯红木楼梯",
+  "block.urushi.crimson_framed_plaster": "绯红木框灰泥",
+  "block.urushi.crimson_framed_wattle_and_daub": "绯红木框土坯",
+  "block.urushi.crimson_framed_sand_coast": "绯红木框砂墙",
+  "block.urushi.crimson_framed_orange_plaster": "绯红木框橙色灰泥",
+  "block.urushi.crimson_framed_magenta_plaster": "绯红木框品红色灰泥",
+  "block.urushi.crimson_framed_light_blue_plaster": "绯红木框淡蓝色灰泥",
+  "block.urushi.crimson_framed_yellow_plaster": "绯红木框黄色灰泥",
+  "block.urushi.crimson_framed_lime_plaster": "绯红木框黄绿色灰泥",
+  "block.urushi.crimson_framed_pink_plaster": "绯红木框粉色灰泥",
+  "block.urushi.crimson_framed_gray_plaster": "绯红木框灰色灰泥",
+  "block.urushi.crimson_framed_light_gray_plaster": "绯红木框淡灰色灰泥",
+  "block.urushi.crimson_framed_cyan_plaster": "绯红木框青色灰泥",
+  "block.urushi.crimson_framed_purple_plaster": "绯红木框紫色灰泥",
+  "block.urushi.crimson_framed_blue_plaster": "绯红木框蓝色灰泥",
+  "block.urushi.crimson_framed_brown_plaster": "绯红木框棕色灰泥",
+  "block.urushi.crimson_framed_green_plaster": "绯红木框绿色灰泥",
+  "block.urushi.crimson_framed_red_plaster": "绯红木框红色灰泥",
+  "block.urushi.crimson_framed_black_plaster": "绯红木框红色灰泥",
+  "block.urushi.crimson_wall_for_framed_blocks": "绯红木墙板",
+  "block.urushi.vertical_smooth_crimson_slab": "平滑绯红木竖直台阶",
+  "block.urushi.smooth_warped_planks": "平滑诡异木板",
+  "block.urushi.smooth_warped_slab": "平滑诡异木台阶",
+  "block.urushi.smooth_warped_stairs": "平滑诡异木楼梯",
+  "block.urushi.warped_framed_plaster": "诡异木框灰泥",
+  "block.urushi.warped_framed_wattle_and_daub": "诡异木框土坯",
+  "block.urushi.warped_framed_sand_coast": "诡异木框砂墙",
+  "block.urushi.warped_framed_orange_plaster": "诡异木框橙色灰泥",
+  "block.urushi.warped_framed_magenta_plaster": "诡异木框品红色灰泥",
+  "block.urushi.warped_framed_light_blue_plaster": "诡异木框淡蓝色灰泥",
+  "block.urushi.warped_framed_yellow_plaster": "诡异木框黄色灰泥",
+  "block.urushi.warped_framed_lime_plaster": "诡异木框黄绿色灰泥",
+  "block.urushi.warped_framed_pink_plaster": "诡异木框粉色灰泥",
+  "block.urushi.warped_framed_gray_plaster": "诡异木框灰色灰泥",
+  "block.urushi.warped_framed_light_gray_plaster": "诡异木框淡灰色灰泥",
+  "block.urushi.warped_framed_cyan_plaster": "诡异木框青色灰泥",
+  "block.urushi.warped_framed_purple_plaster": "诡异木框紫色灰泥",
+  "block.urushi.warped_framed_blue_plaster": "诡异木框蓝色灰泥",
+  "block.urushi.warped_framed_brown_plaster": "诡异木框棕色灰泥",
+  "block.urushi.warped_framed_green_plaster": "诡异木框绿色灰泥",
+  "block.urushi.warped_framed_red_plaster": "诡异木框红色灰泥",
+  "block.urushi.warped_framed_black_plaster": "诡异木框红色灰泥",
+  "block.urushi.warped_wall_for_framed_blocks": "诡异木壁",
+  "block.urushi.vertical_smooth_warped_slab": "平滑诡异木竖直台阶",
+  "info.urushi.same_as_composter": "和堆肥桶类似，右击或使用漏斗以放入物品。",
+  "info.urushi.fermentation_barrel_1": "放入8个米饭会转换为8个酒曲，8个味噌曲会转换为8个味噌。",
+  "info.urushi.fermentation_barrel_2": "放入1个米饭、1个酒曲、1个水竹筒并放置后，使用玻璃瓶可以获得清酒。",
+  "info.urushi.ochoko_1": "饮用后会获得抗性提升与缓慢效果。",
+  "info.urushi.ochoko_2": "多次连续饮用会提升效果的等级与持续时间，但是……",
+  "info.urushi.sake": "在发酵桶内放入1个米饭、1个酒曲、1个水竹筒并放置后，对发酵桶使用玻璃瓶即可获得。",
+  "info.urushi.noodle": "主手持切面刀、副手持面条面团、按住右键可以快速切面。",
+  "item.urushi.sake": "清酒",
+  "item.urushi.tokkuri": "清酒壶",
+  "item.urushi.ochoko": "清酒杯",
+  "entity.urushi.sake_food": "清酒",
+  "entity.urushi.tokkuri_food": "清酒壶",
+  "entity.urushi.ochoko_food": "清酒杯"
 
 
 
