--- a/src/main/resources/assets/urushi/lang/ja_jp.json
+++ b/src/main/resources/assets/urushi/lang/ja_jp.json
@@ -2259,7 +2259,7 @@
     "gui.jei.category.urushi.metal_element_tier2_crafting": "儀式",
     "gui.jei.category.urushi.water_element_tier2_crafting": "儀式",
     "info.urushi.hokora": "下記のアイテムを右クリックまたはホッパーなどで搬入することで霊力5ずつ生産できる",
-    "info.urushi.wood_hokora": "必要なアイテム：完熟した梅の実",
+    "info.urushi.wood_hokora": "必要なアイテム：スイートベリー",
     "info.urushi.fire_hokora": "必要なアイテム：小麦",
     "info.urushi.earth_hokora": "必要なアイテム：籾",
     "info.urushi.metal_hokora": "必要なアイテム：ネギ",
